2016-11-12  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove old GCC bug workaround.
	* lispbibl.d (DYNAMIC_ARRAY): Remove old GCC 2.5.5 workaround.

2016-11-12  Bruno Haible  <bruno@clisp.org>

	Modernize: Update to automake-1.15, libtool-2.4.6, the newest gnulib.
	* Makefile.devel (LIBTOOL_VERSION): Bump to 2.4.6.
	(AUTOMAKE_VERSION): Bump to 1.15.
	(GTK_GIT_ROOT): New variable, replaces GTK2_SVN_ROOT.
	(GNULIB_AUX, build-aux-update): Fetch 'missing' from Automake, not from
	gnulib.
	Update relative paths of files from libtool tarball.
	Fetch both gtk-2.0.m4 and gtk-3.0.m4.

	* m4/libtool.m4: Update from libtool-2.4.6.
	* m4/ltoptions.m4: Likewise.
	* m4/ltsugar.m4: Likewise.
	* m4/ltversion.m4: Likewise.
	* m4/lt~obsolete.m4: Likewise.
	* build-aux/ltmain.sh: Likewise.

	* build-aux/compile: Update from Automake git.
	* build-aux/missing: Likewise.
	* build-aux/ylwrap: Likewise.

	* build-aux/config.guess: Update from gnulib git.
	* build-aux/config.rpath: Likewise.
	* build-aux/config.sub: Likewise.
	* build-aux/depcomp: Likewise.
	* build-aux/install-sh: Likewise.

	* m4/gtk-2.0.m4: Update from GNOME git.
	* m4/gtk-3.0.m4: New file, from GNOME git.

	* gllib/Makefile.in: Regenerated with Automake 1.15.
	* aclocal.m4, src/configure, src/config.h.in: Regenerated with
	Autoconf 2.69.
	* modules/*/configure, modules/*/config.h.in: Likewise.
	* modules/*/*/config.h.in, modules/*/*/configure: Likewise.

2016-11-12  Bruno Haible  <bruno@clisp.org>

	Fix Makefile.devel syntax error introduced on 2011-04-21.
	* Makefile.devel (build-aux-update): Correct shell syntax.

2016-11-12  Bruno Haible  <bruno@clisp.org>

	Modernize: Assume intDsize >= 16.
	* arilev1.d (sign_of_sintD, muluD, muluD_unchecked, divuD, floorD, D):
	Simplify accordingly.
	* intelem.d (get_32_Dptr, set_32_Dptr, get_max32_Dptr, set_max32_Dptr,
	I_to_UQ, I_to_Q, L_to_I, UL_to_I, L2_to_I, UL2_to_I, UQ_to_I): Simplify
	accordingly.
	* intlog.d (logcount_8, integerlength8): Remove macros.